--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>fiapx.security</groupId>
 	<artifactId>springsecurity</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>springsecurity</name>
+	<version>v1</version>
+	<name>fiapx-security</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
