--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,8 +7,8 @@ spring.sql.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://fiapx-security-database.cqqf1skb41ad.us-east-1.rds.amazonaws.com/db_security
-spring.datasource.username=tech_user
-spring.datasource.password=tech_password
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${DB_USER:tech_user}
+spring.datasource.password=${DB_PASSWORD:tech_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
