--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${MYSQL_URL:localhost}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USER:tech_user}
+spring.datasource.password=${DB_PASSWORD:tech_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
